User login: Send verification mail to the user

--- a/extracker/.env
+++ b/extracker/.env
@@ -1,5 +1,9 @@
-DB_NAME=extracker
-DB_USER=postgres
-DB_PASSWORD=password
-DB_HOST=127.0.0.1
-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
+export DB_NAME=extracker
+export DB_USER=postgres
+export DB_PASSWORD=password
+export DB_HOST=127.0.0.1
+export EMAIL_HOST = smtp.gmail.com
+export EMAIL_HOST_USER = harshit.igen@gmail.com
+export EMAIL_HOST_PASSWORD = Khuljasimsim123
+export DEFAULT_FROM_EMAIL= harshit.igen@gmail.com
+#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
