--- a/extracker/.env
+++ b/extracker/.env
@@ -1,6 +1,6 @@
 export DB_NAME=extracker
 export DB_USER=postgres
-export DB_PASSWORD=password
+export DB_PASSWORD=postgres
 export DB_HOST=127.0.0.1
 export EMAIL_HOST = smtp.gmail.com
 export EMAIL_HOST_USER = harshit.igen@gmail.com
